# fujicli

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix
.gitea/: Containerfile
.gitea/workflows/: main.yaml
crates/ptp/cursor/: Cargo.toml
crates/ptp/cursor/src/: lib.rs
crates/ptp/macro/: Cargo.toml
crates/ptp/macro/src/: lib.rs
src/: log.rs  main.rs
src/camera/: devices.rs  error.rs  mod.rs
src/camera/devices/: mod.rs
src/camera/devices/x_trans/: mod.rs
src/camera/devices/x_trans_ii/: mod.rs
src/camera/devices/x_trans_iii/: mod.rs
src/camera/devices/x_trans_iv/: mod.rs
src/camera/devices/x_trans_v/: mod.rs  render.rs  simulation.rs
src/camera/features/: mod.rs
src/camera/features/backup/: mod.rs  ptp.rs
src/camera/features/base/: info.rs  mod.rs
src/camera/features/render/: conversion.rs  mod.rs
src/camera/features/simulation/: mod.rs  simulation.rs
src/camera/ptp/: enums.rs  error.rs  hex.rs  input.rs  mod.rs  read.rs  structs.rs
src/camera/ptp/hex/: container.rs  fuji.rs  macros.rs  (+2 more)
src/cli/: device.rs  mod.rs  simulation.rs
src/cli/backup/: mod.rs
src/cli/common/: file.rs  film.rs  mod.rs  suggest.rs  usb.rs
src/cli/device/: mod.rs  reverse.rs
src/cli/image/: mod.rs
src/cli/render/: mod.rs
src/cli/simulation/: mod.rs
src/hardware/: common.rs  mod.rs  xt5.rs
src/lib/: mod.rs
src/lib/devices/: mod.rs
src/lib/features/: mod.rs
src/lib/ptp/: container.rs  error.rs  fuji.rs  mod.rs  structs.rs
src/lib/usb/: mod.rs
src/usb/: mod.rs
support/: REVERSING.md  monitor-rendering.sh
(+74 files in other folders)
